tests/baselines/reference/trailingSeparatorInFunctionCall.errors.txt
==== tests/cases/compiler/trailingSeparatorInFunctionCall.ts (6 errors) ====
    function f(x, y) {
    }
    
    f(1, 2, );
          ~
!!! error TS1009: Trailing separator not allowed.
    ~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~
!!! error TS2087: Could not select overload for 'call' expression.
    
    function f2<T>(x: T, y: T) {
    }
    
    f2(1, 2, );
           ~
!!! error TS1009: Trailing separator not allowed.
    ~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~~
!!! error TS2087: Could not select overload for 'call' expression.